force-app/main/default/objects/User/fields/V_Login__c.field-meta.xml
<CustomField>
    <fullName>V_Login__c</fullName>
    <formula>Contact.V_Member__r.V_RegistroParticipante__c</formula>
    <label>Login</label>
    <type>Text</type>
</CustomField>