force-app/main/default/objects/User/fields/V_MemberName__c.field-meta.xml
<CustomField>
    <fullName>V_MemberName__c</fullName>
    <label>Nome Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>