force-app/main/default/objects/User/fields/V_NomeCompleto__c.field-meta.xml
<CustomField>
    <fullName>V_NomeCompleto__c</fullName>
    <formula>Contact.V_Member__r.Name</formula>
    <label>Nome Completo</label>
    <type>Text</type>
</CustomField>