force-app/main/default/objects/User/fields/V_NomeTratamentoParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_NomeTratamentoParticipante__c</fullName>
    <formula>Contact.V_NomeTratamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome de Tratamento (Participante)</label>
    <type>Text</type>
</CustomField>