force-app/main/default/objects/User/listViews/Usuarios_Ativos_Serasa.listView-meta.xml
<ListView>
    <fullName>Usuarios_Ativos_Serasa</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Fielo Partner Community</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>teste</value>
    </filters>
    <label>Usuários Ativos - Serasa</label>
    <language>pt_BR</language>
</ListView>